--- a/vaultwarden/config.json
+++ b/vaultwarden/config.json
@@ -1,43 +1,57 @@
 {
-    "name": "Vaultwarden",
-    "version": "1.0.0",
-    "slug": "vaultwarden",
-    "description": "Self-hosted Vaultwarden as HA add-on",
-    
-    "arch": [
-      "amd64",
-      "armv7",
-      "armhf",
-      "aarch64"
-    ],
-    
-    "startup": "services",
-    "boot": "auto",
-    
-    "ports": {
-      "8080/tcp": 8080
-    },
-  
-    "map": [
-      "config:rw",
-      "data:rw",
-      "ssl:rw"
-    ],
-  
-    "options": {
-      "DATABASE_URL": "sqlite:///data/db.sqlite3",
-      "ADMIN_TOKEN": "",
-      "ROCKET_ADDRESS": "0.0.0.0",
-      "ROCKET_PORT": 8080
-    },
-  
-    "schema": {
-      "DATABASE_URL": "str",
-      "ADMIN_TOKEN": "str",
-      "ROCKET_ADDRESS": "str",
-      "ROCKET_PORT": "int"
-    },
-  
-    "webui": "http://[HOST]:[PORT:8080]"
+  "name": "Vaultwarden",
+  "version": "1.0.0",
+  "slug": "vaultwarden",
+  "description": "Self-hosted Vaultwarden as HA add-on",
+  "url": "https://github.com/epistax1s/home-assistant-addons",
+  "arch": [
+    "aarch64",
+    "amd64",
+    "armv7",
+    "armhf"
+  ],
+  "startup": "services",
+  "boot": "auto",
+  "host_network": true,
+  "map": [
+    "addon_config:rw",
+    "ssl:rw"
+  ],
+  "options": {
+    "DATA_FOLDER": "/config/vaultwarden",
+    "DATABASE_URL": "sqlite:///config/vaultwarden/db.sqlite3",
+    "ADMIN_TOKEN": "",
+    "DOMAIN": "http://192.168.1.100:80", 
+    "ROCKET_PORT": 80,
+    "WEBSOCKET_ENABLED": true,
+    "SIGNUPS_ALLOWED": false,
+    "INVITATIONS_ALLOWED": true,
+    "EMERGENCY_ACCESS_ALLOWED": true,
+    "SENDS_ALLOWED": true
+  },
+  "schema": {
+    "DATA_FOLDER": "str?",
+    "DATABASE_URL": "str?",
+    "ADMIN_TOKEN": "password",
+    "DOMAIN": "str",
+    "ROCKET_PORT": "port",
+    "WEBSOCKET_ENABLED": "bool",
+    "SIGNUPS_ALLOWED": "bool",
+    "INVITATIONS_ALLOWED": "bool",
+    "EMERGENCY_ACCESS_ALLOWED": "bool",
+    "SENDS_ALLOWED": "bool"
+  },
+  "environment": {
+    "DATA_FOLDER": "{DATA_FOLDER}",
+    "DATABASE_URL": "{DATABASE_URL}",
+    "ADMIN_TOKEN": "{ADMIN_TOKEN}",
+    "DOMAIN": "{DOMAIN}",
+    "ROCKET_PORT": "{ROCKET_PORT}",
+    "ROCKET_ADDRESS": "0.0.0.0",
+    "WEBSOCKET_ENABLED": "{WEBSOCKET_ENABLED}",
+    "SIGNUPS_ALLOWED": "{SIGNUPS_ALLOWED}",
+    "INVITATIONS_ALLOWED": "{INVITATIONS_ALLOWED}",
+    "EMERGENCY_ACCESS_ALLOWED": "{EMERGENCY_ACCESS_ALLOWED}",
+    "SENDS_ALLOWED": "{SENDS_ALLOWED}"
   }
-  
+}
