--- a/vaultwarden/config.yaml
+++ b/vaultwarden/config.yaml
@@ -45,7 +45,7 @@ environment:
   DATA_FOLDER: "${DATA_FOLDER}"
   DATABASE_URL: "${DATABASE_URL}"
   ADMIN_TOKEN: "${ADMIN_TOKEN}"
-  DOMAIN: "${DOMAIN}"
+  DOMAIN: ${DOMAIN}
   ROCKET_PORT: "${ROCKET_PORT:80}"
   ROCKET_ADDRESS: "0.0.0.0"
   WEBSOCKET_ENABLED: "${WEBSOCKET_ENABLED}"
