--- a/vaultwarden/config.yaml
+++ b/vaultwarden/config.yaml
@@ -21,7 +21,7 @@ options:
   DATA_FOLDER: /config/vaultwarden
   DATABASE_URL: sqlite:///config/vaultwarden/db.sqlite3
   ADMIN_TOKEN: ""
-  DOMAIN: http://192.168.0.133:80
+  DOMAIN: http://192.168.0.134
   ROCKET_PORT: 80
   WEBSOCKET_ENABLED: true
   SIGNUPS_ALLOWED: false
@@ -46,7 +46,7 @@ environment:
   DATABASE_URL: "${DATABASE_URL}"
   ADMIN_TOKEN: "${ADMIN_TOKEN}"
   DOMAIN: ${DOMAIN}
-  ROCKET_PORT: "${ROCKET_PORT:80}"
+  ROCKET_PORT: "${ROCKET_PORT}"
   ROCKET_ADDRESS: "0.0.0.0"
   WEBSOCKET_ENABLED: "${WEBSOCKET_ENABLED}"
   SIGNUPS_ALLOWED: "${SIGNUPS_ALLOWED}"
