--- a/vaultwarden/Dockerfile
+++ b/vaultwarden/Dockerfile
@@ -1,17 +1,19 @@
-ARG BUILD_FROM=vaultwarden/server:latest
+# Dockerfile: Собирает образ аддона.
+# ARG BUILD_FROM: Авто-подставляется HA для архитектуры (2025 стандарт).
+# FROM: Официальный HA base с S6-overlay, bashio, with-contenv.
+# COPY --from: Копируем только нужное из vaultwarden/server (бинарник и web-vault).
+# COPY rootfs /: Копирует S6-структуру в контейнер.
+# RUN chmod: Делает run исполняемым (хорошая практика, хотя S6 может обработать).
 
-# Используем HA base для bashio (apk add bash jq openssl)
-FROM $BUILD_FROM
+ARG BUILD_FROM=ghcr.io/home-assistant/amd64-addon-base:16.0.0  # Замени amd64 на твою arch (aarch64/armv7 и т.д.).
+FROM ${BUILD_FROM}
 
-# Установка зависимостей для run.sh
-RUN apk add --no-cache \
-    bash \
-    jq \
-    openssl
+# Копируем бинарник и веб-интерфейс Vaultwarden.
+COPY --from=vaultwarden/server:latest /app/vaultwarden /usr/bin/vaultwarden
+COPY --from=vaultwarden/server:latest /web-vault /web-vault
 
-# Копируем run.sh
-COPY run.sh /run.sh
-RUN chmod a+x /run.sh
+# Копируем S6-структуру (rootfs) в контейнер.
+COPY rootfs /
 
-# Запуск через run.sh (парсит config и запускает Vaultwarden)
-ENTRYPOINT ["/run.sh"]
+# Делаем скрипт запуска исполняемым.
+RUN chmod a+x /etc/s6-overlay/s6-rc.d/vaultwarden/run
