--- a/vaultwarden/Dockerfile
+++ b/vaultwarden/Dockerfile
@@ -14,5 +14,11 @@ COPY --from=vaultwarden/server:latest /web-vault /web-vault
 # Копируем S6-структуру в НОВОЕ место
 COPY rootfs /
 
+# DEBUG: показать структуру S6 в логах аддона при сборке
+RUN echo "===== DEBUG S6 TREE =====" \
+    && find /etc/s6 -maxdepth 5 -print || true \
+    && echo "===== END DEBUG ====="
+
+
 # Делаем исполняемым (обязательно)
 RUN chmod a+x /etc/s6/services/vaultwarden/run
