--- a/vaultwarden/Dockerfile
+++ b/vaultwarden/Dockerfile
@@ -1,17 +1,54 @@
-# ===== Базовый образ Home Assistant Add-on =====
-ARG BUILD_FROM=ghcr.io/home-assistant/amd64-addon-base:16.0.0
+FROM vaultwarden/server:1.34.3 AS vaultwarden
+
+ARG BUILD_FROM=ghcr.io/hassio-addons/debian-base:9.0.0
 FROM ${BUILD_FROM}
 
-# ===== Устанавливаем утилиты для отладки =====
-RUN apk add --no-cache bash openssl file
+# Set shell
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# ===== Копируем бинарь и веб-интерфейс Vaultwarden =====
-COPY --from=vaultwarden/server:latest /vaultwarden /usr/bin/vaultwarden
-COPY --from=vaultwarden/server:latest /web-vault /web-vault
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        bash \
+        openssl \
+        file \
+        sqlite3 \
+        libpq5 \
+        libmariadb-dev-compat \
+        nginx \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# ===== Копируем структуру HA add-on (S6 + cont-init) =====
+COPY --from=vaultwarden /vaultwarden /opt/vaultwarden
+COPY --from=vaultwarden /web-vault /opt/web-vault
+
 COPY rootfs/ /
 
-# ===== Делаем исполняемыми скрипты =====
 RUN chmod -R a+x /etc/cont-init.d /etc/services.d
+
+ARG BUILD_ARCH
+ARG BUILD_DATE
+ARG BUILD_DESCRIPTION
+ARG BUILD_NAME
+ARG BUILD_REF
+ARG BUILD_REPOSITORY
+ARG BUILD_VERSION
+
+LABEL \
+    io.hass.name="${BUILD_NAME}" \
+    io.hass.description="${BUILD_DESCRIPTION}" \
+    io.hass.arch="${BUILD_ARCH}" \
+    io.hass.type="addon" \
+    io.hass.version=${BUILD_VERSION} \
+    maintainer="Your Name <you@example.com>" \
+    org.opencontainers.image.title="${BUILD_NAME}" \
+    org.opencontainers.image.description="${BUILD_DESCRIPTION}" \
+    org.opencontainers.image.vendor="Home Assistant Community Add-ons" \
+    org.opencontainers.image.authors="Your Name <you@example.com>" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="https://addons.community" \
+    org.opencontainers.image.source="https://github.com/${BUILD_REPOSITORY}" \
+    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/main/README.md" \
+    org.opencontainers.image.created=${BUILD_DATE} \
+    org.opencontainers.image.revision=${BUILD_REF} \
+    org.opencontainers.image.version=${BUILD_VERSION}
 
